# UCG-GFRD-Driver

./: .travis.yml  CMakeLists.txt  README.md  _config.yml
UCG-GFRD-Driver/: CMakeLists.txt  UCG-GFRD-Driver.cpp
_layouts/: home.html  post.html
examples/: UCG.md
scripts/: DCE.sh  TwoComponent_TwoStateToySystem.sh  driver.sh  lammps.sh
test/: CMakeLists.txt  cg_force_pair.table  data.lammps  in.lammps  test_NNodes.cpp  test_coords_test1.cpp  test_coords_test2.cpp  test_defaultNode.cpp  test_natoms.cpp
test/DCE/: CoordFromLAMMPSatFORCENODE.out  Init_CoordFromLAMMPS-Error.out  Init_CoordFromLAMMPS-noError.out  InitialCoordinates-LAMMPSInput.out  LAMMPS_NOMDI.OUT  Perturb_CoordFromLAMMPS.out  data.lammps  in.UCG  in.UCG-Error  in.UCG-noError  log.lammps  mhcorr.in  rates.in
test/TwoComponent_TwoStateToySystem/: LAMMPS_NOMDI.OUT  in.UCG  mhcorr.in  rates.in
